// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package v1alpha1


// +kcc:proto=google.cloud.beyondcorp.appgateways.v1.AppGateway
type AppGateway struct {
	// Required. Unique resource name of the AppGateway.
	//  The name is ignored when creating an AppGateway.
	// +kcc:proto:field=google.cloud.beyondcorp.appgateways.v1.AppGateway.name
	Name *string `json:"name,omitempty"`

	// Optional. Resource labels to represent user provided metadata.
	// +kcc:proto:field=google.cloud.beyondcorp.appgateways.v1.AppGateway.labels
	Labels map[string]string `json:"labels,omitempty"`

	// Optional. An arbitrary user-provided name for the AppGateway. Cannot exceed
	//  64 characters.
	// +kcc:proto:field=google.cloud.beyondcorp.appgateways.v1.AppGateway.display_name
	DisplayName *string `json:"displayName,omitempty"`

	// Required. The type of network connectivity used by the AppGateway.
	// +kcc:proto:field=google.cloud.beyondcorp.appgateways.v1.AppGateway.type
	Type *string `json:"type,omitempty"`

	// Required. The type of hosting used by the AppGateway.
	// +kcc:proto:field=google.cloud.beyondcorp.appgateways.v1.AppGateway.host_type
	HostType *string `json:"hostType,omitempty"`
}

// +kcc:proto=google.cloud.beyondcorp.appgateways.v1.AppGateway.AllocatedConnection
type AppGateway_AllocatedConnection struct {
	// Required. The PSC uri of an allocated connection
	// +kcc:proto:field=google.cloud.beyondcorp.appgateways.v1.AppGateway.AllocatedConnection.psc_uri
	PscURI *string `json:"pscURI,omitempty"`

	// Required. The ingress port of an allocated connection
	// +kcc:proto:field=google.cloud.beyondcorp.appgateways.v1.AppGateway.AllocatedConnection.ingress_port
	IngressPort *int32 `json:"ingressPort,omitempty"`
}

// +kcc:proto=google.cloud.beyondcorp.appgateways.v1.AppGateway
type AppGatewayObservedState struct {
	// Output only. Timestamp when the resource was created.
	// +kcc:proto:field=google.cloud.beyondcorp.appgateways.v1.AppGateway.create_time
	CreateTime *string `json:"createTime,omitempty"`

	// Output only. Timestamp when the resource was last modified.
	// +kcc:proto:field=google.cloud.beyondcorp.appgateways.v1.AppGateway.update_time
	UpdateTime *string `json:"updateTime,omitempty"`

	// Output only. A unique identifier for the instance generated by the
	//  system.
	// +kcc:proto:field=google.cloud.beyondcorp.appgateways.v1.AppGateway.uid
	Uid *string `json:"uid,omitempty"`

	// Output only. The current state of the AppGateway.
	// +kcc:proto:field=google.cloud.beyondcorp.appgateways.v1.AppGateway.state
	State *string `json:"state,omitempty"`

	// Output only. Server-defined URI for this resource.
	// +kcc:proto:field=google.cloud.beyondcorp.appgateways.v1.AppGateway.uri
	URI *string `json:"uri,omitempty"`

	// Output only. A list of connections allocated for the Gateway
	// +kcc:proto:field=google.cloud.beyondcorp.appgateways.v1.AppGateway.allocated_connections
	AllocatedConnections []AppGateway_AllocatedConnection `json:"allocatedConnections,omitempty"`
}
